Fixed letterSpacing cssRule, some Tooltip descriptions and button width for the user-form.

--- a/src/popup/src/popup.sass
+++ b/src/popup/src/popup.sass
@@ -156,6 +156,7 @@ main
             justify-content: center
             button
                 margin: 0 6px
+                width: inherit
     &_field
         height: 180px
         margin: 22px 0
